--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "pizza fun",
     "slug": "pizza-fun",
+    "description": "Basically hangman but with pizza because capital punishment is gross",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
