--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "test" : "jest"
+    "test": "jest"
   },
   "dependencies": {
     "expo": "~44.0.0",
@@ -18,7 +18,8 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-web": "0.17.1",
-    "superagent": "^7.1.1"
+    "superagent": "^7.1.1",
+    "expo-updates": "~0.11.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
