update app json with square image for expo deploy

--- a/app.json
+++ b/app.json
@@ -22,8 +22,8 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
+        "foregroundImage": "./images/squareIcon.png",
+        "backgroundColor": "#FCED61"
       }
     },
     "web": {
